fix: modal mobile title truncate fix

--- a/packages/ui/assets/css/components/modal.css
+++ b/packages/ui/assets/css/components/modal.css
@@ -79,7 +79,7 @@ body.has-modal-bottom {
     }
 
     &__title {
-        @apply m-0 text-center text-xl leading-tight font-heading font-medium truncate;
+        @apply m-0 pr-4 text-center text-xl leading-tight font-heading font-medium truncate;
     }
 
     &__subtitle {
